fixed CTA links on smaller screens

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -167,8 +167,9 @@
             margin-bottom: 10px;
         }
 
-        button {
+        a:nth-child(2) {
             margin-left: 0;
+            text-align: center;
         }
     }
 }
